re PR libfortran/33421 (Weird quotation of namelist output of character arrays)

2007-09-27  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libfortran/33421
	* io/list_read.c (read_character): Revert r128057.

From-SVN: r128857